err/xl-helper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jenkinsapi'...
Listing './lib/python3.5/site-packages/jenkinsapi/command_line'...
Listing './lib/python3.5/site-packages/jenkinsapi/utils'...
Listing './lib/python3.5/site-packages/jenkinsapi-0.3.6.dist-info'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests/systests'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests/test_utils'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests/unittests'...
Listing './lib/python3.5/site-packages/jenkinsapi_utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xl_helper'...
Compiling './lib/python3.5/site-packages/xl_helper/Utils.py'...
***   File "./lib/python3.5/site-packages/xl_helper/Utils.py", line 104
    print "Downloading {url} is being started".format(url=url)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xl_helper/actions'...
Compiling './lib/python3.5/site-packages/xl_helper/actions/Installer.py'...
***   File "./lib/python3.5/site-packages/xl_helper/actions/Installer.py", line 32
    print "Server has been installed to %s" % server_dir
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xl_helper/actions/Server.py'...
***   File "./lib/python3.5/site-packages/xl_helper/actions/Server.py", line 56
    print "Initializing XL Deploy with default configuration."
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xl_helper/actions/Uninstaller.py'...
***   File "./lib/python3.5/site-packages/xl_helper/actions/Uninstaller.py", line 17
    print "The server {} hasn\'t been removed as it doesn\'t exist".format(server_dir)
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xl_helper/actions/Upgrader.py'...
***   File "./lib/python3.5/site-packages/xl_helper/actions/Upgrader.py", line 34
    print "Installing [%s]" % to_dist.version
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xl_helper/artifacts'...
Compiling './lib/python3.5/site-packages/xl_helper/artifacts/Cache.py'...
***   File "./lib/python3.5/site-packages/xl_helper/artifacts/Cache.py", line 24
    print "File %s is already cached." % dist.get_filename()
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xl_helper/artifacts/cli'...
Compiling './lib/python3.5/site-packages/xl_helper/artifacts/cli/DownloadsCliDist.py'...
***   File "./lib/python3.5/site-packages/xl_helper/artifacts/cli/DownloadsCliDist.py", line 12
    print "Downloading CLI distribution %s" % self.version
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xl_helper/artifacts/server'...
Compiling './lib/python3.5/site-packages/xl_helper/artifacts/server/RemoteServerDist.py'...
***   File "./lib/python3.5/site-packages/xl_helper/artifacts/server/RemoteServerDist.py", line 26
    print "Downloading: %s" % self.get_filename()
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xl_helper/resources'...
Listing './lib/python3.5/site-packages/xl_helper-1.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
